--- a/app/package.json
+++ b/app/package.json
@@ -3,12 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@projectstorm/react-diagrams": "^5.3.2",
+    "@types/jest": "^24.0.15",
+    "@types/node": "^12.6.8",
+    "@types/react": "^16.8.23",
+    "@types/react-dom": "^16.8.4",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
     "sass": "^1.22.5",
-    "storm-react-diagrams": "^5.2.1"
+    "storm-react-diagrams": "^5.2.1",
+    "typescript": "3.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
