--- a/app/package.json
+++ b/app/package.json
@@ -5,16 +5,18 @@
   "dependencies": {
     "@projectstorm/react-diagrams": "^5.3.2",
     "@types/jest": "^24.0.15",
+    "@types/lodash": "^4.14.136",
     "@types/node": "^12.6.8",
     "@types/react": "^16.8.23",
     "@types/react-dom": "^16.8.4",
+    "lodash": "^4.17.15",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
     "sass": "^1.22.5",
     "storm-react-diagrams": "^5.2.1",
-    "typescript": "3.4.0"
+    "typescript": "3.4.5"
   },
   "scripts": {
     "start": "react-scripts start",
