--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -1,25 +1,83 @@
+// {
+//   "compilerOptions": {
+//     "target": "es5",
+//     "lib": [
+//       "dom",
+//       "dom.iterable",
+//       "esnext"
+//     ],
+//     "allowJs": true,
+//     "skipLibCheck": true,
+//     "esModuleInterop": true,
+//     "allowSyntheticDefaultImports": true,
+//     "strict": true,
+//     "forceConsistentCasingInFileNames": true,
+//     "module": "esnext",
+//     "moduleResolution": "node",
+//     "resolveJsonModule": true,
+//     "isolatedModules": true,
+//     "noEmit": true,
+//     "jsx": "preserve",
+//     "strictPropertyInitialization": false,
+//     "noImplicitAny": false,
+//     // "suppressExcessPropertyErrors": true,
+// 		// "declaration": true,
+// 		// "outDir": "dist/@types",
+// 		// "strictNullChecks": false,
+// 		// "sourceMap": true,
+// 		// "skipLibCheck": true,
+// 		// "jsx": "react",
+// 		// "baseUrl": ".",
+// 		// "paths": {
+// 		// 	"storm-react-diagrams": ["src/main.ts"]
+// 		// },
+// 		// "target": "es6",
+// 		// "module": "commonjs",
+// 		// "lib": [
+// 		// 	"dom",
+// 		// 	"es6"
+// 		// ]
+//   },
+//   "include": [
+//     "src"
+//   ]
+//  }
+
 {
   "compilerOptions": {
-    "target": "es5",
     "lib": [
       "dom",
+      "es6",
       "dom.iterable",
       "esnext"
     ],
-    "allowJs": true,
+    "suppressExcessPropertyErrors": true,
+    "outDir": "dist/@types",
+    "strictNullChecks": false,
+    "sourceMap": true,
     "skipLibCheck": true,
+    "jsx": "preserve",
+    "baseUrl": "./src",
+    "target": "es6",
+    "module": "esnext",
+    "allowJs": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "strict": true,
     "forceConsistentCasingInFileNames": true,
-    "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
-    "isolatedModules": true,
     "noEmit": true,
-    "jsx": "preserve"
+    "isolatedModules": true
   },
   "include": [
-    "src"
+    "./src"
+  ],
+  "compileOnSave": false,
+  "name": "storm-react-diagrams",
+  "exclude": [
+    "node_modules",
+    "**/*.spec.ts",
+    "./dist"
   ]
 }
